--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "autoprefixer": "^10.3.7",
+    "bootstrap": "^5.1.3",
     "postcss": "^8.3.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
